--- a/memtfg.bib
+++ b/memtfg.bib
@@ -355,3 +355,9 @@
 	url = {https://tailwindcss.com/docs/theme},
 	urldate = {2023-07-13},
 }
+
+@online{github-token,
+	title = {Build software better, together},
+	url = {https://github.com/settings/tokens},
+    urldate = {2023-07-13},
+}
